feat: admin select all and delete skill select language

--- a/FRONTEND/src/app/module/cv/candidate-profile/candidate-profile.component.html
+++ b/FRONTEND/src/app/module/cv/candidate-profile/candidate-profile.component.html
@@ -42,7 +42,7 @@
 		<div class="col">
 			<div class="card shadow-lg border border-dark rounded">
 				<!-- GENERAL INFORMATION -->
-				<app-personal-detail></app-personal-detail>
+				<app-personal-detail [candidate]="candidate"></app-personal-detail>
 
 				<!-- EDUCATION -->
 				<app-candidate-education></app-candidate-education>
