--- a/FRONTEND/src/app/module/cv/candidate-profile/personal-detail/pd-edit-dialog/pd-edit-dialog.component.html
+++ b/FRONTEND/src/app/module/cv/candidate-profile/personal-detail/pd-edit-dialog/pd-edit-dialog.component.html
@@ -53,7 +53,7 @@
 	</div>
 	<mat-divider></mat-divider>
 	<div>
-		<form class="pt-2">
+		<form class="pt-2" [formGroup]="personalDetailForm">
 			<div class="d-flex p-2">
 				<mat-form-field class="px-2">
 					<mat-label>Full name</mat-label>
