--- a/FrontEnd/src/app/module/admin/language/language.component.html
+++ b/FrontEnd/src/app/module/admin/language/language.component.html
@@ -1,1 +1,6 @@
-<p>language works!</p>
+<div class="container">
+	<app-generic-table
+		[dataInput]="listDatas"
+		[displayedColumns]="displayColumn"
+		[listProps]="listProps"></app-generic-table>
+</div>
