--- a/FrontEnd/src/app/module/admin/skill/skill.component.html
+++ b/FrontEnd/src/app/module/admin/skill/skill.component.html
@@ -1,1 +1,8 @@
-<p>skill works!</p>
+<div class="container">
+	<app-generic-table
+		[dataInput]="listSkills"
+		[displayedColumns]="displayColumn"
+		[listProps]="listProps"
+		[createData]="create"
+		[deleteData]="delete"></app-generic-table>
+</div>
