--- a/FrontEnd/src/app/module/cv/cv.component.html
+++ b/FrontEnd/src/app/module/cv/cv.component.html
@@ -6,7 +6,7 @@
 		</ng-template>
 
 		<div class="d-block justify-content-center p-5 border-info rounded">
-			<app-candidate-profile></app-candidate-profile>
+			<app-candidate-profile [candidate]="mySelf"></app-candidate-profile>
 		</div>
 	</mat-tab>
 
