--- a/FrontEnd/src/app/module/admin/admin.component.html
+++ b/FrontEnd/src/app/module/admin/admin.component.html
@@ -1,59 +1,36 @@
-<div class="layout">
+<div class="layout d-flex py-3 px-3">
 	<div class="d-flex flex-column col-3 flex-shrink-0 p-3 text-white rounded" style="background-color: #5462b4">
-		<a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-white text-decoration-none">
+		<a href="/admin" class="d-flex align-items-center text-white text-decoration-none">
 			<span class="fs-4">Admin Dashboard</span>
 		</a>
 		<hr />
 		<ul class="nav nav-pills flex-column mb-auto">
-			<li class="nav-item">
-				<a
-					href="#dashboardSubmenu"
-					class="nav-link text-white"
-					data-bs-toggle="collapse"
-					role="button"
-					aria-expanded="false"
-					aria-controls="dashboardSubmenu">
-					Dashboard
-				</a>
-				<div class="collapse" id="dashboardSubmenu">
-					<ul class="list-group">
-						<a href="/overview" class="list-group-item list-group-item-action text-white bg-dark"
-							>Overview</a
-						>
-						<a href="/reports" class="list-group-item list-group-item-action text-white bg-dark">Reports</a>
-						<a href="/analytics" class="list-group-item list-group-item-action text-white bg-dark"
-							>Analytics</a
-						>
-					</ul>
+			<div ngbAccordion [closeOthers]="true">
+				@for (console of listConsole; track console) {
+				<div ngbAccordionItem [collapsed]="console.title !== 'Dashboard'">
+					<h2 ngbAccordionHeader>
+						<button ngbAccordionButton>{{ console.title }}</button>
+					</h2>
+					<div ngbAccordionCollapse>
+						<div class="d-flex flex-column p-3">
+							@for (child of console.children; track child) {
+							<div class="p-2">
+								@if (child != null) {
+								<button mat-button color="primary" class="w-100" (click)="handleClickRoute(child)">
+									{{ child }}
+								</button>
+								}
+							</div>
+							}
+						</div>
+					</div>
 				</div>
-			</li>
-			<li class="nav-item">
-				<a href="/orders" class="nav-link text-white"> Orders </a>
-			</li>
-			<li class="nav-item">
-				<a
-					href="#productsSubmenu"
-					class="nav-link text-white"
-					data-bs-toggle="collapse"
-					role="button"
-					aria-expanded="false"
-					aria-controls="productsSubmenu">
-					Products
-				</a>
-				<div class="collapse" id="productsSubmenu">
-					<ul class="list-group">
-						<a href="/new-product" class="list-group-item list-group-item-action text-white bg-dark"
-							>New Product</a
-						>
-						<a href="/manage-products" class="list-group-item list-group-item-action text-white bg-dark"
-							>Manage Products</a
-						>
-					</ul>
-				</div>
-			</li>
-			<!-- Thêm các tab khác tại đây -->
+				}
+			</div>
 		</ul>
 		<hr />
 	</div>
-	<router-outlet></router-outlet>
+	<div class="p-3 col">
+		<router-outlet></router-outlet>
+	</div>
 </div>
