--- a/FrontEnd/src/app/module/cv/cv-manage/cv-manage.component.html
+++ b/FrontEnd/src/app/module/cv/cv-manage/cv-manage.component.html
@@ -8,14 +8,19 @@
 	<div class="card p-3">
 		<div class="card">
 			<div class="card-header">
-				<img src="..." class="card-img-top" alt="Avatar" />
+				<!-- pdf-iframe.component.html -->
+				<iframe style="width: 100%; height: 100%" frameborder="0"></iframe>
 				<h5 class="card-title">{{ cv.cvName }}</h5>
-				<h6 class="card-subtitle">{{ cv.cvPdf }}</h6>
+				<h6 class="card-subtitle">
+					<a href="{{ cv.cvPdf }}">
+						{{ cv.cvPdf }}
+					</a>
+				</h6>
 			</div>
-			<div class="card-body">
+			<div>
 				<p class="card-text">{{ cv.aboutMe }}</p>
 			</div>
-			<div class="card-footer">
+			<div>
 				<button class="btn btn-primary">VIEW</button>
 				<button class="btn btn-secondary">DELETE CV</button>
 			</div>
