--- a/FrontEnd/src/app/module/position-detail/position-detail/position-detail.component.html
+++ b/FrontEnd/src/app/module/position-detail/position-detail/position-detail.component.html
@@ -1,51 +1,56 @@
-<div style="background-color: rgb(236, 236, 236); padding-bottom: 80px;">
-	<div style="background-color: rgb(236, 236, 236);">
-		<img src="{{fetchPosition?.imageURL}}" style="width: 100%; height: 200px;" alt="logo">
+<div style="background-color: rgb(236, 236, 236); padding-bottom: 80px">
+	<div style="background-color: rgb(236, 236, 236)">
+		<div style="width: 100%; height: 200px">
+			<img src="{{ fetchPosition?.imageURL }}" class="w-100 h-100" alt="logo" />
+		</div>
 		<div class="shadow">
-			<div class="translate-middle" style="margin-left: 14%; margin-right: 14%; background-color: white;">
+			<div class="translate-middle" style="margin-left: 14%; margin-right: 14%; background-color: white">
 				<div
 					class="rounded-3 position-absolute top-50 start-50 background-image d-flex flex-column justify-content-center">
-					<div class="d-flex flex-row rounded-2"
-						style="background-color: rgb(255, 255, 255); padding: 30px 30px 30px 30px;">
-						<div class="d-flex flex-row rounded-4 hover-overlay" style="width: 100%;">
-							<div class="" style="width: 150px; height: 150px;">
-								<img src="{{fetchPosition?.company?.logo}}" class="rounded-4"
-									style="width: 100%; height: 100%;"
-									alt="{{fetchPosition?.company?.companyName + ' logo'}}">
+					<div
+						class="d-flex flex-row rounded-2"
+						style="background-color: rgb(255, 255, 255); padding: 30px 30px 30px 30px">
+						<div class="d-flex flex-row rounded-4 hover-overlay" style="width: 100%">
+							<div class="" style="width: 150px; height: 150px">
+								<img
+									src="{{ fetchPosition?.company?.logo }}"
+									class="rounded-4"
+									style="width: 100%; height: 100%"
+									alt="{{ fetchPosition?.company?.companyName + ' logo' }}" />
 							</div>
-							<div style="width: 40%; margin-left: 4%;">
-								<div class="fs-3" style="font-weight: 500; cursor: pointer; margin-bottom: 15px;">
-									{{
-									fetchPosition?.positionName | uppercase }}
+							<div style="width: 40%; margin-left: 4%">
+								<div class="fs-3" style="font-weight: 500; cursor: pointer; margin-bottom: 15px">
+									{{ fetchPosition?.positionName | uppercase }}
 								</div>
-								<div class="custom-row" style="color: blue;"> {{ fetchPosition?.company?.companyName }}
+								<div class="custom-row" style="color: blue">
+									{{ fetchPosition?.company?.companyName }}
 								</div>
-								<div class="custom-row" style="color: rgb(251, 115, 74);">
+								<div class="custom-row" style="color: rgb(251, 115, 74)">
 									@if (fetchPosition?.minSalary && fetchPosition?.maxSalary) {
-									{{fetchPosition?.minSalary + '-' + fetchPosition?.maxSalary}}
-									}
-									@else if (fetchPosition?.minSalary) {
-									{{'Above '+ fetchPosition?.minSalary}}
-									}
-									@else if (fetchPosition?.maxSalary) {
-									{{'Up to '+ fetchPosition?.maxSalary}}
-									}
-									@else {
-									Negotiable
-									}
+									{{ fetchPosition?.minSalary + '-' + fetchPosition?.maxSalary }}
+									} @else if (fetchPosition?.minSalary) {
+									{{ 'Above ' + fetchPosition?.minSalary }}
+									} @else if (fetchPosition?.maxSalary) {
+									{{ 'Up to ' + fetchPosition?.maxSalary }}
+									} @else { Negotiable }
 								</div>
-								<div class="custom-row" style="color: black;"> Hiring quantity: {{
-									fetchPosition?.maxHiringQty }}</div>
-								<div class="custom-row" style="color: rgb(100, 100, 100);"><i
-										class="bi bi-calendar3"></i> {{ fetchPosition?.startDate
-									|
-									date:'dd/MM/yyyy' }} - {{
-									fetchPosition?.endDate |
-									date:'dd/MM/yyyy' }}</div>
-								<div class="custom-row rounded-2"
-									style="padding: 2px 2px 2px 2px; background-color: rgb(224, 224, 224) ;width: fit-content;">
-									{{
-									fetchPosition?.language?.languageName}}</div>
+								<div class="custom-row" style="color: black">
+									Hiring quantity: {{ fetchPosition?.maxHiringQty }}
+								</div>
+								<div class="custom-row" style="color: rgb(100, 100, 100)">
+									<i class="bi bi-calendar3"></i>
+									{{ fetchPosition?.startDate | date : 'dd/MM/yyyy' }} -
+									{{ fetchPosition?.endDate | date : 'dd/MM/yyyy' }}
+								</div>
+								<div
+									class="custom-row rounded-2"
+									style="
+										padding: 2px 2px 2px 2px;
+										background-color: rgb(224, 224, 224);
+										width: fit-content;
+									">
+									{{ fetchPosition?.language?.languageName }}
+								</div>
 							</div>
 						</div>
 					</div>
@@ -53,28 +58,29 @@
 			</div>
 		</div>
 	</div>
-	<div class="" style="margin-left: 14%; margin-right: 14%; margin-top: 110px;">
-		<div class="fs-5 d-flex flex-column" style=" background-color: rgb(236, 236, 236); height: 100%;">
+	<div class="" style="margin-left: 14%; margin-right: 14%; margin-top: 110px">
+		<div class="fs-5 d-flex flex-column" style="background-color: rgb(236, 236, 236); height: 100%">
 			<mat-tab-group dynamicHeight mat-stretch-tabs="false" mat-align-tabs="start" animationDuration="0ms">
 				<mat-tab>
 					<ng-template mat-tab-label>
-						<span style="font-weight: 600; font-size: 18px;">Information</span>
+						<span style="font-weight: 600; font-size: 18px">Information</span>
 					</ng-template>
-					<div class="rounded-3 p-4" style="background-color: rgb(255, 255, 255); ">
-						<div style="font-size: 24px; margin-top: 10px;">Description</div>
-						<div class="mt-3" style="line-height: 1.5; font-size: 16px;">{{fetchPosition?.description}}
+					<div class="rounded-3 p-4" style="background-color: rgb(255, 255, 255)">
+						<div style="font-size: 24px; margin-top: 10px">Description</div>
+						<div class="mt-3" style="line-height: 1.5; font-size: 16px">
+							{{ fetchPosition?.description }}
 						</div>
-						<div style="font-size: 24px; margin-top: 30px;" class="mb-3">Requirements</div>
+						<div style="font-size: 24px; margin-top: 30px" class="mb-3">Requirements</div>
 						@for (item of this.fetchPosition?.requirements; track item) {
-						<li style="line-height: 1.5; font-size: 16px; margin-top: 8px;">{{item.skill?.skillName}} -
-							{{item.skill?.description}}:
+						<li style="line-height: 1.5; font-size: 16px; margin-top: 8px">
+							{{ item.skill?.skillName }} - {{ item.skill?.description }}:
 						</li>
-						<div style="font-size: 16px; margin-left: 60px; line-height: 1.5;">
+						<div style="font-size: 16px; margin-left: 60px; line-height: 1.5">
 							<div>
-								{{item.experience}}
+								{{ item.experience }}
 							</div>
 							<div>
-								{{item.notes}}
+								{{ item.notes }}
 							</div>
 						</div>
 						}
@@ -82,54 +88,81 @@
 				</mat-tab>
 				<mat-tab>
 					<ng-template mat-tab-label>
-						<span style="font-weight: 600; font-size: 18px;">About Company</span>
+						<span style="font-weight: 600; font-size: 18px">About Company</span>
 					</ng-template>
-					<div class="rounded-3 p-4 d-flex flex-row" style="background-color: rgb(255, 255, 255); ">
-						<div class="me-3" style="border: 1px solid #1c395f; width: 60%; border-radius: 10px;">
-							<div class="p-3"
-								style="font-weight: 700; width: 100%; background-color: #1c395f; color: white; border-top-left-radius: 9px; border-top-right-radius: 9px;">
-								Company
-								Introduction
+					<div class="rounded-3 p-4 d-flex flex-row" style="background-color: rgb(255, 255, 255)">
+						<div class="me-3" style="border: 1px solid #1c395f; width: 60%; border-radius: 10px">
+							<div
+								class="p-3"
+								style="
+									font-weight: 700;
+									width: 100%;
+									background-color: #1c395f;
+									color: white;
+									border-top-left-radius: 9px;
+									border-top-right-radius: 9px;
+								">
+								Company Introduction
 							</div>
 							<div class="p-3">
-								<div style=" margin-top: 20px; font-size: 24px; margin-bottom: 40px;">
-									{{fetchPosition?.company?.companyName}}</div>
-								<div style="font-size:18px; margin-top: 10px;">Company description:
-									<span class="mt-3" style="line-height: 1.5; font-size: 16px;">
+								<div style="margin-top: 20px; font-size: 24px; margin-bottom: 40px">
+									{{ fetchPosition?.company?.companyName }}
+								</div>
+								<div style="font-size: 18px; margin-top: 10px">
+									Company description:
+									<span class="mt-3" style="line-height: 1.5; font-size: 16px">
 										Company description
 									</span>
 								</div>
-								<div style="font-size: 18px; margin-top: 10px;">Website:
-									<a href="{{fetchPosition?.company?.website}}" class="mt-3"
-										style="line-height: 1.5; font-size: 16px;">
-										{{fetchPosition?.company?.website}}
+								<div style="font-size: 18px; margin-top: 10px">
+									Website:
+									<a
+										href="{{ fetchPosition?.company?.website }}"
+										class="mt-3"
+										style="line-height: 1.5; font-size: 16px">
+										{{ fetchPosition?.company?.website }}
 									</a>
 								</div>
 							</div>
 						</div>
-						<div style="height: fit-content; border: 1px solid #1c395f; width: 40%; border-radius: 10px;">
-							<div class="p-3"
-								style="font-weight: 600; width: 100%; background-color: #1c395f; color: white; border-top-left-radius: 9px; border-top-right-radius: 9px;">
+						<div style="height: fit-content; border: 1px solid #1c395f; width: 40%; border-radius: 10px">
+							<div
+								class="p-3"
+								style="
+									font-weight: 600;
+									width: 100%;
+									background-color: #1c395f;
+									color: white;
+									border-top-left-radius: 9px;
+									border-top-right-radius: 9px;
+								">
 								Contact
 							</div>
 							<div class="p-3">
-								<div style="font-size:18px;">
+								<div style="font-size: 18px">
 									<i class="bi bi-house-door-fill"></i>
-									<span class="mt-3 ms-2" style="line-height: 1.5; font-size: 16px;">
-										{{fetchPosition?.company?.address}}
+									<span class="mt-3 ms-2" style="line-height: 1.5; font-size: 16px">
+										{{ fetchPosition?.company?.address }}
 									</span>
 								</div>
-								<div style="font-size: 18px; margin-top: 10px;">
+								<div style="font-size: 18px; margin-top: 10px">
 									<i class="bi bi-envelope-fill"></i>
-									<a href="https://mail.google.com/mail/?view=cm&fs=1&to={{fetchPosition?.company?.email}}"
+									<a
+										href="https://mail.google.com/mail/?view=cm&fs=1&to={{
+											fetchPosition?.company?.email
+										}}"
 										class="mt-3 ms-2"
-										style="line-height: 1.5; font-size: 16px;">{{fetchPosition?.company?.email}}
+										style="line-height: 1.5; font-size: 16px"
+										>{{ fetchPosition?.company?.email }}
 									</a>
 								</div>
-								<div style="font-size: 18px; margin-top: 10px;">
+								<div style="font-size: 18px; margin-top: 10px">
 									<i class="bi bi-telephone-fill"></i>
-									<a href="tel:{{fetchPosition?.company?.phone}}" class="mt-3 ms-2"
-										style="line-height: 1.5; font-size: 16px;">{{fetchPosition?.company?.phone}}
+									<a
+										href="tel:{{ fetchPosition?.company?.phone }}"
+										class="mt-3 ms-2"
+										style="line-height: 1.5; font-size: 16px"
+										>{{ fetchPosition?.company?.phone }}
 									</a>
 								</div>
 							</div>
@@ -138,12 +171,10 @@
 				</mat-tab>
 				<mat-tab disabled>
 					<ng-template mat-tab-label>
-						<span style="font-weight: 500; font-size: 18px;">Jobs from company</span>
+						<span style="font-weight: 500; font-size: 18px">Jobs from company</span>
 					</ng-template>
-					<div class="rounded-3 p-4" style="background-color: rgb(255, 255, 255); ">
-						<div class="mt-3" style="line-height: 1.5; font-size: 16px;">
-							Jobs from company
-						</div>
+					<div class="rounded-3 p-4" style="background-color: rgb(255, 255, 255)">
+						<div class="mt-3" style="line-height: 1.5; font-size: 16px">Jobs from company</div>
 					</div>
 				</mat-tab>
 			</mat-tab-group>
