--- a/FRONTEND/src/app/module/reccer/event/event.component.css
+++ b/FRONTEND/src/app/module/reccer/event/event.component.css
@@ -1,3 +1,18 @@
+.image-container {
+	position: relative;
+	display: inline-block;
+}
+
+.image-container img {
+	display: block;
+}
+
+.btn-position {
+	position: absolute;
+	top: 10px;
+	right: 10px;
+}
+
 .search-bar {
 
 	position: relative;
