--- a/FrontEnd/src/app/module/position/position.component.html
+++ b/FrontEnd/src/app/module/position/position.component.html
@@ -1,25 +1,32 @@
-<div class=" d-flex flex-column justify-content-center" style="margin-left: 7%; margin-right: 7%;">
+<div class="d-flex flex-column justify-content-center" style="margin-left: 7%; margin-right: 7%">
 	<!-- <span class=" mt-4 mx-auto" style="font-size: 35px;">POSITIONS</span> -->
 	<div class="mx-3">
 		<div class="container py-3 d-flex flex-row">
-			<div class="d-flex flex-column" style="width: 70%;">
-				<div class=" d-flex flex-row" style="width: 100%;">
+			<div class="d-flex flex-column" style="width: 70%">
+				<div class="d-flex flex-row" style="width: 100%">
 					@if(this.curentUserRoles?.includes('Admin') || this.curentUserRoles?.includes('Recruiter')) {
 					<div class="my-auto">
-						<button color="primary" style="font-size: 15px;" mat-raised-button
+						<button
+							color="primary"
+							style="font-size: 15px"
+							mat-raised-button
 							class="d-flex justify-content-center align-items-center"
 							(click)="openAddFormDialog('100ms', '0ms')">
-							<i class="bi bi-plus-circle" style="font-size: 20px;"></i> New Position
+							<i class="bi bi-plus-circle" style="font-size: 20px"></i> New Position
 						</button>
 					</div>
-					<mat-slide-toggle (change)="this.handleOnlyMine($event)" class="my-auto ms-4" color="accent">Only
-						mine</mat-slide-toggle>
+					<mat-slide-toggle (change)="this.handleOnlyMine($event)" class="my-auto ms-4" color="accent"
+						>Only mine</mat-slide-toggle
+					>
 
 					}
-					<div class=" ms-auto d-flex flex-row">
-						<div style="font-size: 18px;" class="my-auto me-2">Sort: </div>
-						<select class="form-select border-1 border-dark shadow" (change)="handleSortSelect($event)"
-							[value]="this.sortString" aria-label="Default select example">
+					<div class="ms-auto d-flex flex-row">
+						<div style="font-size: 18px" class="my-auto me-2">Sort:</div>
+						<select
+							class="form-select border-1 border-dark shadow"
+							(change)="handleSortSelect($event)"
+							[value]="this.sortString"
+							aria-label="Default select example">
 							<option class="p-2" selected value="PositionName_ASC">Name (A-Z)</option>
 							<option class="p-2" value="PositionName_DESC">Name (Z-A)</option>
 							<option class="p-2" value="MinSalary_DESC">Salary (High to low)</option>
@@ -30,83 +37,121 @@
 					</div>
 
 					<div class="mt-2 d-flex ms-4 flex-row-reverse fs-3">
-						Result count: {{this.fetchedPositions?.length}}
+						Result count: {{ this.fetchedPositions?.length }}
 					</div>
 				</div>
 
 				@for (position of fetchedPositions; track position) {
-				<div class="d-flex flex-row rounded-4 hover-overlay my-2"
-					style="padding: 10px 10px 10px 10px; width: 100%; background-color: rgb(230, 241, 250); border: 1px solid rgb(134, 134, 232);">
-					<div style="width: 15%;">
-						<img src="{{position.company?.logo}}" class="rounded-4" style="width: 120px; height: 120px;"
-							alt="{{position.company?.companyName + ' logo'}}">
+				<div
+					class="d-flex flex-row rounded-4 hover-overlay my-2"
+					style="
+						padding: 10px 10px 10px 10px;
+						width: 100%;
+						background-color: rgb(230, 241, 250);
+						border: 1px solid rgb(134, 134, 232);
+					">
+					<div style="width: 15%">
+						<img
+							src="{{ position.company?.logo }}"
+							class="rounded-4"
+							style="width: 120px; height: 120px"
+							alt="{{ position.company?.companyName + ' logo' }}" />
 					</div>
-					<div style="width: 40%; margin-left: 4%;">
-						<div class="fs-5 custom-row" style="font-weight: 500; cursor: pointer;">
-							<span [routerLink]="['/positions/detail', position.positionId]">{{
-								position.positionName | uppercase }}</span>
-						</div>
-						<div class="custom-row"> {{ position.company?.companyName }}</div>
-						<div class="custom-row" style="color: rgb(251, 115, 74);">
-							@if (position.minSalary && position.maxSalary) {
-							@if (position.minSalary === position.maxSalary) {
+					<div style="width: 40%; margin-left: 4%">
+						<div class="fs-5 custom-row" style="font-weight: 500; cursor: pointer">
+							<span
+								[routerLink]="['/positions/detail', position.positionId]"
+								[ngbPopover]="positionDetailsHover"
+								[openDelay]="500"
+								[closeDelay]="2000"
+								popoverTitle="Job details"
+								triggers="mouseenter:mouseleave"
+								>{{ position.positionName | uppercase }}
+							</span>
 
-							{{'$' + position.minSalary}}
-							}
-							@else {
-							{{'$' + position.minSalary + ' - ' + '$'+position.maxSalary}}
-							}
-							}
-							@else if (position.minSalary) {
-							{{'$' +position.minSalary + ' and higher'}}
-							}
-							@else if (position.maxSalary) {
-							{{'Up to $'+ position.maxSalary}}
-							}
-							@else {
-							$ Negotiable
-							}
+							<ng-template #positionDetailsHover>
+								<div>
+									{{ position.positionName | uppercase }}
+								</div>
+								<div class="py-1">
+									{{ position.description }}
+								</div>
+								<div class="d-flex justify-content-end py-1">
+									<button
+										mat-button
+										color="primary"
+										[routerLink]="['/positions/detail', position.positionId]">
+										View more
+									</button>
+								</div>
+							</ng-template>
 						</div>
-						<div class="custom-row"> Max hiring quantity: {{ position.maxHiringQty }}</div>
-						<div class="custom-row"><i class="bi bi-calendar3"></i> {{ position.startDate |
-							date:'dd/MM/yyyy' }}
-							- {{ position.endDate |
-							date:'dd/MM/yyyy' }}</div>
-						<div class="custom-row rounded-2"
-							style="padding: 2px 2px 2px 2px; background-color: rgb(224, 224, 224) ;width: fit-content;">
-							{{
-							position.language?.languageName}}</div>
+						<div class="custom-row">{{ position.company?.companyName }}</div>
+						<div class="custom-row" style="color: rgb(251, 115, 74)">
+							@if (position.minSalary && position.maxSalary) { @if (position.minSalary ===
+							position.maxSalary) {
+
+							{{ '$' + position.minSalary }}
+							} @else {
+							{{ '$' + position.minSalary + ' - ' + '$' + position.maxSalary }}
+							} } @else if (position.minSalary) {
+							{{ '$' + position.minSalary + ' and higher' }}
+							} @else if (position.maxSalary) {
+							{{ 'Up to $' + position.maxSalary }}
+							} @else { $ Negotiable }
+						</div>
+						<div class="custom-row">Max hiring quantity: {{ position.maxHiringQty }}</div>
+						<div class="custom-row">
+							<i class="bi bi-calendar3"></i> {{ position.startDate | date : 'dd/MM/yyyy' }} -
+							{{ position.endDate | date : 'dd/MM/yyyy' }}
+						</div>
+						<div
+							class="custom-row rounded-2"
+							style="padding: 2px 2px 2px 2px; background-color: rgb(224, 224, 224); width: fit-content">
+							{{ position.language?.languageName }}
+						</div>
 					</div>
-					<div class="ms-3 flex-grow-1" style="width: 25%;"></div>
-					<div class="ms-3 me-2" style="width: 3%;">
+					<div class="ms-3 flex-grow-1" style="width: 25%"></div>
+					<div class="ms-3 me-2" style="width: 3%">
 						@if(position.recruiter?.userId === currentUser.id) {
 						<i mat-button [matMenuTriggerFor]="menu" class="bi bi-three-dots custom-3-dot"></i>
 						}
 					</div>
 					<mat-menu #menu="matMenu">
-						<button mat-menu-item [routerLink]="['/applications', position.positionId]"><i
-								style="color: blue;" class="bi bi-eye-fill"></i> Application
-							List</button>
-						<button mat-menu-item (click)="openEditFormDialog(position, '100ms', '0ms')"><i
-								class="bi bi-pencil-square"></i> Edit</button>
-						<button mat-menu-item (click)="openDeleteDialog(position.positionId??'', '100ms', '0ms')"><i
-								class="bi bi-trash3-fill" style="color: red;"></i> Delete </button>
+						<button mat-menu-item [routerLink]="['/applications', position.positionId]">
+							<i style="color: blue" class="bi bi-eye-fill"></i> Application List
+						</button>
+						<button mat-menu-item (click)="openEditFormDialog(position, '100ms', '0ms')">
+							<i class="bi bi-pencil-square"></i> Edit
+						</button>
+						<button mat-menu-item (click)="openDeleteDialog(position.positionId ?? '', '100ms', '0ms')">
+							<i class="bi bi-trash3-fill" style="color: red"></i> Delete
+						</button>
 					</mat-menu>
-				</div>}
+				</div>
+				}
 
-				<div style="width: 100%;" class="d-flex flex-row justify-content-center">
-					<mat-paginator class=" mb-2" style="font-size: 17px;" [length]="this.totalMatchedInDb"
-						[pageSize]="this.pageSize" [pageSizeOptions]="[5, 10, 25, 100]" [showFirstLastButtons]="true"
-						(page)="handlePageEvent($event)" aria-label="Select page">
+				<div style="width: 100%" class="d-flex flex-row justify-content-center">
+					<mat-paginator
+						class="mb-2"
+						style="font-size: 17px"
+						[length]="this.totalMatchedInDb"
+						[pageSize]="this.pageSize"
+						[pageSizeOptions]="[5, 10, 25, 100]"
+						[showFirstLastButtons]="true"
+						(page)="handlePageEvent($event)"
+						aria-label="Select page">
 					</mat-paginator>
 				</div>
 			</div>
-			<div class="d-flex flex-column ms-4 mt-5" style="width: 30%;">
+			<div class="d-flex flex-column ms-4 mt-5" style="width: 30%">
 				<app-filter [formGroup]="this.filterForm"></app-filter>
-				<img class="mt-4"
-					src="https://www.vietnamworks.com/_next/image?url=https%3A%2F%2Fimages.vietnamworks.com%2Flogo%2F500x600-3_125824.png&w=1920&q=75">
-				<img class="mt-4"
-					src="https://www.vietnamworks.com/_next/image?url=https%3A%2F%2Fimages.vietnamworks.com%2Flogo%2F500x600_125466.jpg&w=1920&q=75">
+				<img
+					class="mt-4"
+					src="https://www.vietnamworks.com/_next/image?url=https%3A%2F%2Fimages.vietnamworks.com%2Flogo%2F500x600-3_125824.png&w=1920&q=75" />
+				<img
+					class="mt-4"
+					src="https://www.vietnamworks.com/_next/image?url=https%3A%2F%2Fimages.vietnamworks.com%2Flogo%2F500x600_125466.jpg&w=1920&q=75" />
 			</div>
 		</div>
 	</div>
