feat: backend - get default cv

--- a/FrontEnd/src/app/module/home/home.component.html
+++ b/FrontEnd/src/app/module/home/home.component.html
@@ -20,12 +20,12 @@
 		</div>
 	</section>
 
-	<section class="gioi-thi">
+	<!-- <section class="gioi-thi">
 		<div class="row py-5">
 			<div class="col-md-12">
 				<h2 class="h2">Giới thiệu</h2>
 				<p>[Nội dung giới thiệu]</p>
 			</div>
 		</div>
-	</section>
+	</section> -->
 </main>
