--- a/FrontEnd/src/app/module/position-detail/position-detail/position-detail.component.html
+++ b/FrontEnd/src/app/module/position-detail/position-detail/position-detail.component.html
@@ -58,7 +58,13 @@
 			</div>
 		</div>
 	</div>
-	<div class="" style="margin-left: 14%; margin-right: 14%; margin-top: 110px">
+	<div class="pt-2" style="margin-left: 14%; margin-right: 14%; margin-top: 110px">
+		<div>
+			<button mat-raised-button color="primary" class="w-100 py-3" (click)="handleClickApply()">
+				<i class="fa-regular fa-paper-plane px-3"></i>
+				Apply now
+			</button>
+		</div>
 		<div class="fs-5 d-flex flex-column" style="background-color: rgb(236, 236, 236); height: 100%">
 			<mat-tab-group dynamicHeight mat-stretch-tabs="false" mat-align-tabs="start" animationDuration="0ms">
 				<mat-tab>
